- [151] calibration of climate model parameters
- [157] new model for ice thickness & velocity
- need a model for movement of points in ice
- why does ablation curve back towards zero when elevation < 1000m ?

DESIGN ISSUES (user interface):
- do we want to show values or relative ranges (cold-to-hot) for climate controls?
- [159] user-interface design for climate experiments

HIGH PRIORITY:
- add Glacier.getLength (assume length of glacier is always < 80km)
- get new ice thickness & velocity models
- visualization of ice velocity (vectors remain stationary)
- optimization of ice velocity
- add proxy for snowfall visualization
- add coordinates view
- always collect data for time-based graphs, keep "lastest" & "historical" data points, compress historical, limit historical size
- add zoom in/out button for time-based graphs; show scrolling "lastest" data or complete "historical"
- try making clock speed control change framerate instead of dt, keep constant dt=1 year

MEDIUM PRIORITY:
- model borehole as a set of moving points, connected via line segments
- when birds-eye view is wider than model range, fill in with tile-able mountain and valley
- create convincing mountains, either with an image or with Java2D
- should Glacial Budget graph show accumulation & ablation? if so, fix x-axis label
- x-axis of charts currently autoscales, set fixed range?
- clip equilibrium line to area where it intersects ice (what happens when it doesn't intersect ice?)
- fix layout problems with main control panel
- add pseudo-3D perspective
- is magnification of zoomed view sufficient?
- apply an inverse scaling to tools and toolbox so that camera scaling only affects valley and glacier
- remove tools by dragging them back to the trash can (or toolbox?)
- if tools turn out to not need time (t), remove it from base class
- make Reset All reset model to initial state
- make Reset All reset all view-only control to their initial state
- make Reset All delete all tools