@@ -34,8 +34,4 @@ public class BasicDefaults {
     public static final DoubleRange SNOWFALL_RANGE = GlobalDefaults.SNOWFALL_RANGE; 
     public static final DoubleRange SNOWFALL_REFERENCE_ELEVATION_RANGE = GlobalDefaults.SNOWFALL_REFERENCE_ELEVATION_RANGE;
     public static final DoubleRange TEMPERATURE_RANGE = GlobalDefaults.TEMPERATURE_RANGE;
-    
-    //XXX ???
-    public static final DoubleRange EQUILIBRIUM_LINE_ALTITUDE_RANGE = GlobalDefaults.EQUILIBRIUM_LINE_ALTITUDE_RANGE;
-    public static final DoubleRange MAXIMUM_SNOWFALL_RANGE = GlobalDefaults.MAXIMUM_SNOWFALL_RANGE;
 }
